--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
   <div class="container">
     <ul class="card">
       <li class="list-title">Bookkeeping</li>
-      <li><a href="https://drive.google.com/drive/u/0/folders/0B4D0XyvnfRfdfmVUckloYTJDa1Z0SHo2Q0pFMXFlWFFIZ1VHY19Sa1JxUTAxYWxUdHFucEk"><i class="fa fa-money"></i> Invoice Tracking</a></li>
-      <li><a href="https://drive.google.com/drive/u/0/folders/0B4D0XyvnfRfdfk5FVFVaUE90SFpHaWR1SWpBWWJVZ1JHMlhmRlBsNjhoQlV4MV9JaFQ5aGs"><i class="fa fa-book"></i> Ledger</a></li>
-      <li><a href="https://drive.google.com/drive/u/0/folders/0BzJVLus8XiFdfkwzVnkwcml0dFgtZ1pJdXhJUEZlY21HUC12WlFmazZyN3B5TVdlblVtV0E"><i class="fa fa-credit-card"></i> Receipts</a></li>
-      <li><a href="https://vireoproductions.freshbooks.com/"><i class="fa fa-fire"></i> Freshbooks</a></li>
+      <li><a href="https://docs.google.com/spreadsheets/d/1DZqzMVjNxW7S8DFhECO6o-E6xuF4TLxiJZH-l5XwyhU/edit#gid=0" target="_BLANK"><i class="fa fa-money"></i> Invoice Tracking</a></li>
+      <li><a href="https://docs.google.com/spreadsheets/d/19-59R1sZMrRV47vblNQkF8i7C9uWk1y_pgrLbJoL-VI/edit#gid=0" target="_BLANK"><i class="fa fa-book"></i> Ledger</a></li>
+      <li><a href="https://drive.google.com/drive/u/0/folders/0BzJVLus8XiFdfkwzVnkwcml0dFgtZ1pJdXhJUEZlY21HUC12WlFmazZyN3B5TVdlblVtV0E" target="_BLANK"><i class="fa fa-credit-card"></i> Receipts</a></li>
+      <li><a href="https://vireoproductions.freshbooks.com/" target="_BLANK"><i class="fa fa-fire"></i> Freshbooks</a></li>
     </ul>
 
     <ul class="card">
       <li class="list-title">Project Management</li>
-      <li><a href="https://drive.google.com/drive/u/0/folders/0BzJVLus8XiFdfkVNYU96WkFFTllqVHdqWU9ka011UmdaR2RTbkwyTGRSblBYSENXNEdHSzA"><i class="fa fa-pied-piper-alt"></i> Clients</a></li>
-      <li><a href="https://app.asana.com/"><i class="fa fa-cubes"></i> Asana</a></li>
-      <li><a href="https://toggl.com/"><i class="fa fa-toggle-on"></i> Toggl</a></li>
+      <li><a href="https://drive.google.com/drive/u/0/folders/0BzJVLus8XiFdfkVNYU96WkFFTllqVHdqWU9ka011UmdaR2RTbkwyTGRSblBYSENXNEdHSzA" target="_BLANK"><i class="fa fa-pied-piper-alt"></i> Clients</a></li>
+      <li><a href="https://app.asana.com/" target="_BLANK"><i class="fa fa-cubes"></i> Asana</a></li>
+      <li><a href="https://toggl.com/" target="_BLANK"><i class="fa fa-toggle-on"></i> Toggl</a></li>
     </ul>
 
     <ul class="card">
       <li class="list-title">Social Media</li>
-      <li><a href="https://www.facebook.com/VireoProductions?ref=aymt_homepage_panel"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-      <li><a href="https://twitter.com/vireoproduction"><i class="fa fa-twitter"></i> Twitter</a></li>
-      <li><a href="https://plus.google.com/u/1/+Vireoproductions/posts"><i class="fa fa-google-plus"></i> Google+</a></li>
-      <li><a href="https://instagram.com/vireoproductions/"><i class="fa fa-instagram"></i> Instagram</a></li>
+      <li><a href="https://www.facebook.com/VireoProductions?ref=aymt_homepage_panel" target="_BLANK"><i class="fa fa-facebook-official"></i> Facebook</a></li>
+      <li><a href="https://twitter.com/vireoproduction" target="_BLANK"><i class="fa fa-twitter"></i> Twitter</a></li>
+      <li><a href="https://plus.google.com/u/1/+Vireoproductions/posts" target="_BLANK"><i class="fa fa-google-plus"></i> Google+</a></li>
+      <li><a href="https://instagram.com/vireoproductions/" target="_BLANK"><i class="fa fa-instagram"></i> Instagram</a></li>
     </ul>
 
     <ul class="card">
       <li class="list-title">Tools</li>
-      <li><a href="https://inbox.google.com/u/0/"><i class="fa fa-envelope-o"></i> Inbox</a></li>
-      <li><a href="https://bart.asoshared.com:2096/"><i class="fa fa-envelope"></i> Webmail</a></li>
-      <li><a href="https://drive.google.com/drive/u/0/my-drive"><i class="fa fa-hdd-o"></i> Google Drive</a></li>
-      <li><a href="https://www.dropbox.com/home"><i class="fa fa-dropbox"></i> Dropbox</a></li>
-      <li><a href="https://habitrpg.com/"><i class="fa fa-key"></i> HabitRPG</a></li>
+      <li><a href="https://inbox.google.com/u/0/" target="_BLANK"><i class="fa fa-envelope-o"></i> Inbox</a></li>
+      <li><a href="https://bart.asoshared.com:2096/" target="_BLANK"><i class="fa fa-envelope"></i> Webmail</a></li>
+      <li><a href="https://drive.google.com/drive/u/0/my-drive" target="_BLANK"><i class="fa fa-hdd-o"></i> Google Drive</a></li>
+      <li><a href="https://keep.google.com/" target="_BLANK"><i class="fa fa-list"></i> Google Keep</a></li>
+      <li><a href="https://www.dropbox.com/home" target="_BLANK"><i class="fa fa-dropbox"></i> Dropbox</a></li>
     </ul>
 
     <h1 class="vireo">Vireo<span> Productions</span></h1>
