--- a/index.html
+++ b/index.html
@@ -4,58 +4,50 @@
   <meta charset="UTF-8">
   <title>Vireo Productions</title>
   <link rel="stylesheet" href="style.css">
-  <link href='http://fonts.googleapis.com/css?family=Inconsolata|Roboto:400,300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 </head>
 <body>
+  <section class="home-content">
+    <div class="container">
+      <ul class="card bookkeeping">
+        <li class="list-title">Bookkeeping</li>
+        <li><a href="https://docs.google.com/spreadsheets/d/1DZqzMVjNxW7S8DFhECO6o-E6xuF4TLxiJZH-l5XwyhU/edit#gid=0" target="_BLANK"><i class="fa fa-money"></i> Invoice Tracking</a></li>
+        <li><a href="https://docs.google.com/spreadsheets/d/19-59R1sZMrRV47vblNQkF8i7C9uWk1y_pgrLbJoL-VI/edit#gid=0" target="_BLANK"><i class="fa fa-book"></i> Ledger</a></li>
+        <li><a href="https://drive.google.com/drive/u/0/folders/0BzJVLus8XiFdfkwzVnkwcml0dFgtZ1pJdXhJUEZlY21HUC12WlFmazZyN3B5TVdlblVtV0E" target="_BLANK"><i class="fa fa-credit-card"></i> Receipts</a></li>
+        <li><a href="https://vireoproductions.freshbooks.com/" target="_BLANK"><i class="fa fa-fire"></i> Freshbooks</a></li>
+      </ul>
 
-<canvas id="pixie"></canvas>
+      <ul class="card project-management">
+        <li class="list-title">Project Management</li>
+        <li><a href="https://drive.google.com/drive/u/0/folders/0BzJVLus8XiFdfkVNYU96WkFFTllqVHdqWU9ka011UmdaR2RTbkwyTGRSblBYSENXNEdHSzA" target="_BLANK"><i class="fa fa-pied-piper-alt"></i> Clients</a></li>
+        <li><a href="https://app.asana.com/" target="_BLANK"><i class="fa fa-cubes"></i> Asana</a></li>
+        <li><a href="https://trello.com/" target="_BLANK"><i class="fa fa-trello"></i> Trello</a></li>
+        <li><a href="https://toggl.com/" target="_BLANK"><i class="fa fa-toggle-on"></i> Toggl</a></li>
+      </ul>
 
-<header>
-  <div class="container">
-    <a href="http://www.vireoproductions.com"><img src="img/logo.png" class="logo" alt="Vireo Productions"></a>
-  </div>
-</header>
+      <ul class="card social-media">
+        <li class="list-title">Social Media</li>
+        <li><a href="https://www.facebook.com/VireoProductions?ref=aymt_homepage_panel" target="_BLANK"><i class="fa fa-facebook-official"></i> Facebook</a></li>
+        <li><a href="https://twitter.com/vireoproduction" target="_BLANK"><i class="fa fa-twitter"></i> Twitter</a></li>
+        <li><a href="https://plus.google.com/u/1/+Vireoproductions/posts" target="_BLANK"><i class="fa fa-google-plus"></i> Google+</a></li>
+        <li><a href="https://instagram.com/vireoproductions/" target="_BLANK"><i class="fa fa-instagram"></i> Instagram</a></li>
+      </ul>
 
-<section class="home-content">
-  <div class="container">
-    <ul class="card bookkeeping">
-      <li class="list-title">Bookkeeping</li>
-      <li><a href="https://docs.google.com/spreadsheets/d/1DZqzMVjNxW7S8DFhECO6o-E6xuF4TLxiJZH-l5XwyhU/edit#gid=0" target="_BLANK"><i class="fa fa-money"></i> Invoice Tracking</a></li>
-      <li><a href="https://docs.google.com/spreadsheets/d/19-59R1sZMrRV47vblNQkF8i7C9uWk1y_pgrLbJoL-VI/edit#gid=0" target="_BLANK"><i class="fa fa-book"></i> Ledger</a></li>
-      <li><a href="https://drive.google.com/drive/u/0/folders/0BzJVLus8XiFdfkwzVnkwcml0dFgtZ1pJdXhJUEZlY21HUC12WlFmazZyN3B5TVdlblVtV0E" target="_BLANK"><i class="fa fa-credit-card"></i> Receipts</a></li>
-      <li><a href="https://vireoproductions.freshbooks.com/" target="_BLANK"><i class="fa fa-fire"></i> Freshbooks</a></li>
-    </ul>
+      <ul class="card tools">
+        <li class="list-title">Tools</li>
+        <li><a href="https://inbox.google.com/u/0/" target="_BLANK"><i class="fa fa-envelope-o"></i> Inbox</a></li>
+        <li><a href="https://bart.asoshared.com:2096/" target="_BLANK"><i class="fa fa-envelope"></i> Webmail</a></li>
+        <li><a href="https://drive.google.com/drive/u/0/my-drive" target="_BLANK"><i class="fa fa-hdd-o"></i> Google Drive</a></li>
+        <li><a href="https://keep.google.com/" target="_BLANK"><i class="fa fa-list"></i> Google Keep</a></li>
+      </ul>
 
-    <ul class="card project-management">
-      <li class="list-title">Project Management</li>
-      <li><a href="https://drive.google.com/drive/u/0/folders/0BzJVLus8XiFdfkVNYU96WkFFTllqVHdqWU9ka011UmdaR2RTbkwyTGRSblBYSENXNEdHSzA" target="_BLANK"><i class="fa fa-pied-piper-alt"></i> Clients</a></li>
-      <li><a href="https://app.asana.com/" target="_BLANK"><i class="fa fa-cubes"></i> Asana</a></li>
-      <li><a href="https://trello.com/" target="_BLANK"><i class="fa fa-trello"></i> Trello</a></li>
-      <li><a href="https://toggl.com/" target="_BLANK"><i class="fa fa-toggle-on"></i> Toggl</a></li>
-    </ul>
+      <h1 class="vireo"><a href="http://vireoproductions.com" target="_BLANK">Vireo<span> Productions</span></a></h1>
+    </div>
+  </section>
 
-    <ul class="card social-media">
-      <li class="list-title">Social Media</li>
-      <li><a href="https://www.facebook.com/VireoProductions?ref=aymt_homepage_panel" target="_BLANK"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-      <li><a href="https://twitter.com/vireoproduction" target="_BLANK"><i class="fa fa-twitter"></i> Twitter</a></li>
-      <li><a href="https://plus.google.com/u/1/+Vireoproductions/posts" target="_BLANK"><i class="fa fa-google-plus"></i> Google+</a></li>
-      <li><a href="https://instagram.com/vireoproductions/" target="_BLANK"><i class="fa fa-instagram"></i> Instagram</a></li>
-    </ul>
-
-    <ul class="card tools">
-      <li class="list-title">Tools</li>
-      <li><a href="https://inbox.google.com/u/0/" target="_BLANK"><i class="fa fa-envelope-o"></i> Inbox</a></li>
-      <li><a href="https://bart.asoshared.com:2096/" target="_BLANK"><i class="fa fa-envelope"></i> Webmail</a></li>
-      <li><a href="https://drive.google.com/drive/u/0/my-drive" target="_BLANK"><i class="fa fa-hdd-o"></i> Google Drive</a></li>
-      <li><a href="https://keep.google.com/" target="_BLANK"><i class="fa fa-list"></i> Google Keep</a></li>
-    </ul>
-
-    <h1 class="vireo"><a href="http://vireoproductions.com" target="_BLANK">Vireo<span> Productions</span></a></h1>
-  </div>
-</section>
-<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="app.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
